# HiNote

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/static/: script.js
frontend/templates/: index.html
hinote/: __main__.py  indexer.py  main.py  player.py
hinote/frontend/static/: styles.css
tests/: test_api.py  test_env.py  test_static_serving.py
