[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hinote"
version = "0.1.0"
description = "HiNote local music streaming app"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mutagen",
    "Jinja2",
]

[tool.setuptools.packages.find]
include = ["hinote*"]
